@@ -223,6 +223,7 @@ game.menu.autoendgo=Auto End Go
 game.menu.close=Close Game
 game.menu.closemenu=Close Menu
 game.menu.colorblind=Color blind
+game.menu.fullscreen=Fullscreen
 game.menu.language=Language
 game.menu.leave=Leave Game
 game.menu.manual=Manual
